--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
     <%= javascript_include_tag "application", "data-turbolinks-track": "reload" %>
   </head>
 
-  <body class="padTop53">
+  <body>
     <div id="wrap">
       <%= render "layouts/header"%>
       <div id="content">
