--- a/app/assets/stylesheets/colors.scss
+++ b/app/assets/stylesheets/colors.scss
@@ -2,3 +2,12 @@ $red: red;
 $violet: #5a109e;
 $gray_border: #e7e7e7;
 $gray_bg: #f8f8f8;
+$gray-medium-light: #eaeaea;
+$white: #ffffff;
+$bold: #bbb;
+$hex-gray91: #e8e8e8;
+$blue: #052c6b;
+$gray-light: #D3D3D3;
+$gray: #808080;
+$gray-darker: #A9A9A9;
+$state-danger-text: #ba0b0e;
