--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -270,3 +270,18 @@ span.picture {
     padding: 0;
   }
 }
+#link_month_intense {
+  color: $white
+}
+
+.btn_month {
+  margin-top: 10px;
+}
+
+.month_intense {
+  margin-top: 100px;
+}
+
+.field_month_intense {
+  height: 30px;
+}
