--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -20,6 +20,7 @@
         <li><a href="#">Link</a></li>
         <li><a href="#">Link</a></li>
         <% if logged_in? %>
+          <li><button class="btn-primary btn btn-sm btn_month"><%= link_to t("month_intense"), new_month_intense_path, id: "link_month_intense"%></button></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= t "menu.account" %><span class="caret"></span></a>
             <ul class="dropdown-menu">
