--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,7 +3,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <p>&copy; RubyTeam &nbsp;2019 &nbsp;</p>
+        <p>&copy;<%= t "month_report.other.footer" %>&nbsp;</p>
       </div>
     </div>
   </div>
