--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -16,11 +16,10 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Link</a></li>
-        <li><a href="#">Link</a></li>
-        <li><a href="#">Link</a></li>
+        <li><%= link_to t("month_report.link_page.month_report"), month_report_path%></li>
+        <li><%= link_to t("month_report.link_page.year_report")%></li>
+        <li><%= link_to t("month_report.link_page.category")%></li>
         <% if logged_in? %>
-          <li><button class="btn-primary btn btn-sm btn_month"><%= link_to t("month_intense"), new_month_intense_path, id: "link_month_intense"%></button></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= t "menu.account" %><span class="caret"></span></a>
             <ul class="dropdown-menu">
