--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,8 @@
     <%= csp_meta_tag %>
 
     <%= render "layouts/shrim" %>
+    <%= include_gon %>
+
     <%= stylesheet_link_tag "application", media: "all", "data-turbolinks-track": "reload" %>
     <%= javascript_include_tag "application", "data-turbolinks-track": "reload" %>
   </head>
@@ -14,10 +16,16 @@
     <div id="wrap">
       <%= render "layouts/header"%>
       <div id="content">
-        <% flash.each do |message_type, message| %>
-          <div class="alert alert-<%= message_type %>"><%= message %></div>
-        <% end %>
-        <%= yield %>
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12">
+              <% flash.each do |message_type, message| %>
+                <div class="alert alert-<%= message_type %>"><%= message %></div>
+              <% end %>
+              <%= yield %>
+            </div>
+          </div>
+        </div>
       </div>
       <%= render "layouts/footer" %>
     </div>
