--- a/app/assets/stylesheets/colors.scss
+++ b/app/assets/stylesheets/colors.scss
@@ -11,3 +11,12 @@ $gray-light: #D3D3D3;
 $gray: #808080;
 $gray-darker: #A9A9A9;
 $state-danger-text: #ba0b0e;
+$blue1: #337ab7;
+$gray_border: rgba(0,0,0,.12);
+$blue: #337ab7;
+$white: white;
+$light-green: #b3d4fc;
+$gray_c: #ccc;
+$gray_box_sha: rgba(0, 0, 0, 0.075);
+$bl_3: #333;
+$bl_6: #666;
