--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -35,8 +35,6 @@
     }
   }
 }
-/* mixins, variables, etc. */
-
 
 /* universal */
 
@@ -171,6 +169,7 @@ aside {
 }
 
 #content {
+  padding: 15px 0;
   min-height: calc(100vh - 50px);
 }
 
@@ -284,4 +283,121 @@ span.picture {
 
 .field_month_intense {
   height: 30px;
+}
+
+.mt-20 {
+  margin-top: 20px;
+}
+
+.table > tbody > tr > td {
+  vertical-align: middle;
+}
+
+.form-control {
+  margin-bottom: 20px;
+}
+
+.navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
+  background-color: $blue;
+  color: $white;
+}
+
+.action {
+  text-align: right;
+  margin-bottom: 20px;
+}
+
+.px-0 {
+  padding-left: 0;
+  padding-right: 0;
+}
+
+.category-item {
+  text-align: left;
+  cursor: pointer;
+  position: relative;
+  border-bottom: 1px solid $gray_border;
+  &:hover {
+    background: $light-green;
+  }
+  .line-dot {
+    position: absolute;
+    width: 10px;
+    border-bottom: 2px dotted $gray_border;
+    top: 50%;
+    left: 0;
+  }
+
+  .caret-custom {
+    position: absolute;
+    display: block;
+    right: 0;
+    line-height: 50px;
+    width: 50px;
+    top: 0;
+    text-align: center;
+    z-index: 1;
+    font-size: 16px;
+    &:hover {
+      color: $red;
+    }
+  }
+}
+
+.cat-link {
+  display: block;
+  padding: 15px 16px;
+  color: $bl_3;
+  &:hover {
+    color: $bl_6;
+    text-decoration: none;
+  }
+}
+
+.list-cat-child {
+  margin-left: 20px;
+  display: none;
+  .category-item {
+    .cat-link {
+      border-left: 2px dotted $gray_border;
+    }
+  }
+}
+
+@mixin form_input {
+  display: inline-block;
+  width: 100%;
+  height: 34px!important;
+  padding: .375rem 1.75rem .375rem .75rem;
+  line-height: 1.5;
+  vertical-align: middle;
+  background:transparent;
+  border: 1px solid $gray_c;
+  border-radius: 4px;
+  margin-bottom: 30px;
+  box-shadow: inset 0 1px 1px $gray_box_sha;
+  outline: none;
+}
+
+select {
+  display: inline-block;
+  width: 100%;
+  height: 34px;
+  padding: .375rem 1.75rem .375rem .75rem;
+  line-height: 1.5;
+  vertical-align: middle;
+  background:transparent;
+  border: 1px solid $gray_c;
+  border-radius: 4px;
+  margin-bottom: 30px;
+  box-shadow: inset 0 1px 1px $gray_box_sha;
+  outline: none;
+}
+
+.mb-0 {
+  margin-bottom: 0;
+}
+
+.btn {
+  width: auto;
 }
