--- a/app/views/report/month_report.html.erb
+++ b/app/views/report/month_report.html.erb
@@ -1,7 +1,7 @@
 <% provide :title, t("month_report.title.month_report") %>
-<div class="container">
+
+<div class="container" id="report">
   <div class="row link_page">
-    <div><%= @saving.saving_in_year %></div>
     <%= link_to t("month_report.link_page.move_chart"), "#chartContainer" %>
   </div>
   <div class="row" id="report">
@@ -25,7 +25,7 @@
               <%= render "shared/table_month_report" %>
             </tbody>
           </table>
-          
+
         </div>
       </div>
     </div>
@@ -88,7 +88,7 @@
                     <div class="text-right">
                       <%= f.submit t("button.save_month_intense"), class: "btn btn-primary btn-sm btn-save-report" %>
                     </div>
-                    
+
                   <% end %>
                 </div>
               </div>
@@ -96,30 +96,7 @@
           </div>
         </div>
       </div>
-      <button type="button" class="btn btn-info btn-lg btn-year-saving" data-toggle="modal" data-target="#myModal2">
-        <%= t "saving.year_saving" %>
-      </button>
-      <div id="myModal2" class="modal fade" role="dialog">
-        <div class="modal-dialog clearfix">
-          <div class="row">
-            <div class="col-md-8 col-md-offset-2 month_intense">
-              <div class="panel panel-primary">
-                <div class="panel-heading text-center"><%= t "saving.year_saving" %> </div>
-                <div class="panel-body pad-35 clearfix" >
-                  <%= form_for @saving, url: savings_path do |f| %>
-                    <div class="mb-15">
-                      <%= f.number_field :saving_in_year, class: "form_control field_month_intense", min: Settings.filed.min %>
-                    </div>
-                    <div class="text-right">
-                      <%= f.submit t("button.save_month_intense"), class: "btn btn-primary btn-sm btn-save-report" %>
-                    </div>
-                  <% end %>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
+
     </div>
   </div>
   <hr>
