--- a/app/views/report/year_report.html.erb
+++ b/app/views/report/year_report.html.erb
@@ -95,7 +95,7 @@
                 <div class="panel-body pad-35 clearfix" >
                   <%= form_for @saving, url: savings_path do |f| %>
                     <div class="mb-15">
-                      <%= f.number_field :saving_in_year, class: "form_control field_month_intense", min: Settings.filed.min %>
+                      <%= f.text_field :saving_in_year, class: "form_control field_month_intense f_number1"%>
                     </div>
                     <div class="text-right">
                       <%= f.submit t("button.save_month_intense"), class: "btn btn-primary btn-sm btn-save-report" %>
