--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -401,3 +401,19 @@ select {
 .btn {
   width: auto;
 }
+
+.btn-year-saving {
+  margin-left: 30px;
+}
+
+.btn-save-report {
+
+}
+
+.panel-body.pad-35 {
+  padding: 35px;
+}
+
+.mb-15 {
+  margin-bottom: 15px;
+}
