--- a/app/views/report/month_report.html.erb
+++ b/app/views/report/month_report.html.erb
@@ -1,7 +1,7 @@
 <% provide :title, t("month_report.title.month_report") %>
-
 <div class="container">
   <div class="row link_page">
+    <div><%= @saving.saving_in_year %></div>
     <%= link_to t("month_report.link_page.move_chart"), "#chartContainer" %>
   </div>
   <div class="row" id="report">
@@ -76,23 +76,45 @@
       </button>
       <div id="myModal" class="modal fade" role="dialog">
         <div class="modal-dialog">
-          <div class="col-md-8 month_intense">
-            <div class="panel panel-primary">
-              <div class="panel-heading"><%= t "month_intense" %> </div>
-              <div >
-                <%= form_for :month_intense, url: month_intenses_path do |f| %>
-                  <div>
-                    <div class="col-md-2"> </div>
-                    <%= f.label :month_intense %>
-                    <div class="col-md-2"></div>
-                  </div>
-                  <div>
-                    <div class="col-md-2"> </div>
-                    <%= f.number_field :month_intense, class: "form_control field_month_intense col-md-8", min: Settings.filed.min %>
-                    <div class="col-md-2"></div>
-                  </div>
-                  <%= f.submit t("button.save_month_intense"), class: "btn btn-primary btn-sm" %>
-                <% end %>
+          <div class="row">
+            <div class="col-md-8 col-md-offset-2 month_intense">
+              <div class="panel panel-primary">
+                <div class="panel-heading text-center"><%= t "month_intense" %> </div>
+                <div class="panel-body pad-35 clearfix">
+                  <%= form_for :month_intense, url: month_intenses_path do |f| %>
+                    <div class="mb-15">
+                      <%= f.number_field :month_intense, class: "form_control field_month_intense", min: Settings.filed.min %>
+                    </div>
+                    <div class="text-right">
+                      <%= f.submit t("button.save_month_intense"), class: "btn btn-primary btn-sm btn-save-report" %>
+                    </div>
+                    
+                  <% end %>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <button type="button" class="btn btn-info btn-lg btn-year-saving" data-toggle="modal" data-target="#myModal2">
+        <%= t "saving.year_saving" %>
+      </button>
+      <div id="myModal2" class="modal fade" role="dialog">
+        <div class="modal-dialog clearfix">
+          <div class="row">
+            <div class="col-md-8 col-md-offset-2 month_intense">
+              <div class="panel panel-primary">
+                <div class="panel-heading text-center"><%= t "saving.year_saving" %> </div>
+                <div class="panel-body pad-35 clearfix" >
+                  <%= form_for @saving, url: savings_path do |f| %>
+                    <div class="mb-15">
+                      <%= f.number_field :saving_in_year, class: "form_control field_month_intense", min: Settings.filed.min %>
+                    </div>
+                    <div class="text-right">
+                      <%= f.submit t("button.save_month_intense"), class: "btn btn-primary btn-sm btn-save-report" %>
+                    </div>
+                  <% end %>
+                </div>
               </div>
             </div>
           </div>
