--- a/app/views/report/year_report.html.erb
+++ b/app/views/report/year_report.html.erb
@@ -83,6 +83,7 @@
           </table>
         </div>
       </div>
+      <%= render "shared/table_intense_report" %>
       <button type="button" class="btn btn-info btn-lg btn-year-saving" data-toggle="modal" data-target="#myModal2">
         <%= t "saving.year_saving" %>
       </button>
