--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-default navbar-fixed-top">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -16,10 +16,10 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to t("month_report.link_page.month_report"), month_report_path%></li>
-        <li><%= link_to t("month_report.link_page.year_report"), year_report_path%></li>
-        <li><%= link_to t("month_report.link_page.category")%></li>
         <% if logged_in? %>
+          <li><%= link_to t("month_report.link_page.month_report"), month_report_path%></li>
+          <li><%= link_to t("month_report.link_page.year_report"), year_report_path%></li>
+          <li><%= link_to t("month_report.link_page.category")%></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= t "menu.account" %><span class="caret"></span></a>
             <ul class="dropdown-menu">
