previous months report

--- a/app/assets/stylesheets/month_report.scss
+++ b/app/assets/stylesheets/month_report.scss
@@ -70,3 +70,12 @@ table.dataTable tbody {
 .row.link_page {
   margin: 20px 0;
 }
+
+#select-old-report {
+  margin: 0 20% 5% 0;
+  width: 60%;
+}
+
+#old_month_report {
+  margin-top: 2%;
+}
