--- a/app/views/report/month_report.html.erb
+++ b/app/views/report/month_report.html.erb
@@ -25,7 +25,6 @@
               <%= render "shared/table_month_report" %>
             </tbody>
           </table>
-
         </div>
       </div>
     </div>
@@ -95,7 +94,7 @@
           </div>
         </div>
       </div>
-
+      <%= render "shared/panel_old_month" %>
     </div>
   </div>
   <hr>
