Add admin sidebar v2

--- a/app/assets/stylesheets/colors.scss
+++ b/app/assets/stylesheets/colors.scss
@@ -20,3 +20,8 @@ $gray_c: #ccc;
 $gray_box_sha: rgba(0, 0, 0, 0.075);
 $bl_3: #333;
 $bl_6: #666;
+$bl_5: #555;
+$bl_header_admin: #4272d7;
+$border_sidebar: #e5e5e5;
+$gray_admin_menu: #f2f2f2;
+$bg_e5: #e5e5e5;
