--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -1,3 +1,5 @@
-<div class="alert alert-success mt-20" role="alert">
-  <%= t "alert.welcome_admin" %>
+<div class="col-md-12">
+  <div class="alert alert-success mt-20" role="alert">
+    <%= t "alert.welcome_admin" %>
+  </div>
 </div>
