--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -21,7 +21,11 @@
           <li><%= link_to t("month_report.link_page.year_report"), year_report_path%></li>
           <li><%= link_to t("month_report.link_page.category")%></li>
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= t "menu.account" %><span class="caret"></span></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+              <span><%= t "header.welcome" %></span>
+              <%= current_user.username %>
+              <span class="caret"></span>
+            </a>
             <ul class="dropdown-menu">
               <li><%= link_to t("users.profile"), current_user %></li>
               <li><%= link_to t("users.setting"), edit_user_path(current_user) %></li>
