--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,8 +1,14 @@
 <% provide :title, t("button.signup") %>
 <% provide :button_text, t("users.create_my_account") %>
-<h1><%= t "button.signup" %></h1>
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
-    <%= render "form" %>
+    <div class="panel panel-primary">
+      <div class="panel-heading">
+        <%= t "button.signup" %>
+      </div>
+      <div class="panel-body">
+        <%= render "form" %>
+      </div>
+    </div>
   </div>
 </div>
