--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -235,6 +235,10 @@ footer {
   padding: 15px 0;
   background: $gray_bg;
   border-top: 1px solid $gray_border;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
   p {
     color: $red;
     margin-bottom: 0;
@@ -485,4 +489,9 @@ select {
 #adStatMonthChart, #adStatYearChart {
   height: 400px;
   width: 100%;
+}
+
+#panel-login {
+  display: grid;
+  height:80vh;
 }
