--- a/app/views/report/month_report.html.erb
+++ b/app/views/report/month_report.html.erb
@@ -47,66 +47,85 @@
               </span>
             </div>
           </div>
-          <div class="form-group">
-            <label for="exampleInputEmail1"><%= t "month_report.title.category"%></label>
-            <select class="form-control add_transaction" >
-              <optgroup label="Income">
-                <option value="AK">Alaska</option>
-                <option value="HI">Hawaii</option>
-              </optgroup>
-              <optgroup label="Expense">
-                <option value="AK">Alaska</option>
-                <option value="HI">Hawaii</option>
-              </optgroup>
-              <optgroup label="Dept/Loan">
-                <option value="AK">Alaska</option>
-                <option value="HI">Hawaii</option>
-              </optgroup>
-            </select>
-          </div>
-          <div class="form-group">
-            <label for="exampleFormControlTextarea1"><%= t "month_report.title.note"%></label>
-            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-          </div>
         </div>
-      </div>
-      <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">
-        <%= t "month_intense" %>
-      </button>
-      <div id="myModal" class="modal fade" role="dialog">
-        <div class="modal-dialog">
-          <div class="row">
-            <div class="col-md-8 col-md-offset-2 month_intense">
-              <div class="panel panel-primary">
-                <div class="panel-heading text-center"><%= t "month_intense" %> </div>
-                <div class="panel-body pad-35 clearfix">
-                  <%= form_for :month_intense, url: month_intenses_path do |f| %>
-                    <div class="mb-15">
-                      <%= f.text_field :month_intense, class: "form_control field_month_intense f_number1" %>
+        <div class="col-md-4">
+          <div class="panel panel-success">
+            <div class="panel-heading">
+              <h1 class="panel-title"><%= t "month_report.title.add_transaction"%></h1>
+            </div>
+            <div class="panel-body">
+              <div class="form-group">
+                <label for="exampleInputEmail1"><%= t "month_report.title.amout"%></label>
+                <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="">
+              </div>
+              <div class="form-group">
+                <label for="exampleInputEmail1"><%= t "month_report.title.time"%></label>
+                <div class="input-group date" id="datetimepicker3">
+                  <input type="text" class="form-control" />
+                  <span class="input-group-addon">
+                      <span class="glyphicon glyphicon-time"></span>
+                  </span>
+                </div>
+              </div>
+              <div class="form-group">
+                <label for="exampleInputEmail1"><%= t "month_report.title.category"%></label>
+                <select class="form-control add_transaction" >
+                  <optgroup label="Income">
+                    <option value="AK">Alaska</option>
+                    <option value="HI">Hawaii</option>
+                  </optgroup>
+                  <optgroup label="Expense">
+                    <option value="AK">Alaska</option>
+                    <option value="HI">Hawaii</option>
+                  </optgroup>
+                  <optgroup label="Dept/Loan">
+                    <option value="AK">Alaska</option>
+                    <option value="HI">Hawaii</option>
+                  </optgroup>
+                </select>
+              </div>
+              <div class="form-group">
+                <label for="exampleFormControlTextarea1"><%= t "month_report.title.note"%></label>
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+              </div>
+            </div>
+          </div>
+          <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">
+            <%= t "month_intense" %>
+          </button>
+          <div id="myModal" class="modal fade" role="dialog">
+            <div class="modal-dialog">
+              <div class="row">
+                <div class="col-md-8 col-md-offset-2 month_intense">
+                  <div class="panel panel-primary">
+                    <div class="panel-heading text-center"><%= t "month_intense" %> </div>
+                    <div class="panel-body pad-35 clearfix">
+                      <%= form_for :month_intense, url: month_intenses_path do |f| %>
+                        <div class="mb-15">
+                          <%= f.text_field :month_intense, class: "form_control field_month_intense f_number1" %>
+                        </div>
+                        <div class="text-right">
+                          <%= f.submit t("button.save_month_intense"), class: "btn btn-primary btn-sm btn-save-report " %>
+                        </div>
+                      <% end %>
                     </div>
-                    <div class="text-right">
-                      <%= f.submit t("button.save_month_intense"), class: "btn btn-primary btn-sm btn-save-report" %>
-                    </div>
-                  <% end %>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
+          <%= render "shared/panel_old_month" %>
         </div>
       </div>
-      <%= render "shared/panel_old_month" %>
+    </div>
+    <div class="tab-pane fade" id="chart">
+      <div class="row" >
+        <div class="col-md-6">
+          <div id="chartContainer" style="height: 300px; width: 100%;"></div>
+        </div>
+        <div class="col-md-6">
+          <div id="barChartContainer" style="height: 300px; width: 100%;"></div>
+        </div>
+      </div>
     </div>
   </div>
-  <hr>
-  <div class="row link_page">
-    <%= link_to t("month_report.link_page.move_report"), "#report" %>
-  </div>
-  <div class="row" id="chart">
-    <div class="col-md-6">
-      <div id="chartContainer" style="height: 300px; width: 100%;"></div>
-    </div>
-    <div class="col-md-6">
-      <div id="barChartContainer" style="height: 300px; width: 100%;"></div>
-    </div>
-  </div>
-</div>
