--- a/app/assets/stylesheets/colors.scss
+++ b/app/assets/stylesheets/colors.scss
@@ -25,3 +25,6 @@ $bl_header_admin: #4272d7;
 $border_sidebar: #e5e5e5;
 $gray_admin_menu: #f2f2f2;
 $bg_e5: #e5e5e5;
+$yellow_F5F528: #FFC300;
+$green_189E16: #189E16;
+$dark-gray_2e2e2e: #2e2e2e;
