--- a/app/views/report/month_report.html.erb
+++ b/app/views/report/month_report.html.erb
@@ -1,6 +1,6 @@
 <% provide :title, t("month_report.title.month_report") %>
 
-<div class="container" id="report">
+<div class="container">
   <div class="row link_page">
     <%= link_to t("month_report.link_page.move_chart"), "#chartContainer" %>
   </div>
