--- a/app/assets/stylesheets/month_report.scss
+++ b/app/assets/stylesheets/month_report.scss
@@ -109,7 +109,7 @@ table.dataTable tbody {
 }
 
 #old_month_report-btn {
-  margin-top: 10px;
+  float: right;
 }
 
 #chartContainer_month, #barChartContainer_month {
