--- a/app/views/shared/_panel_old_month.erb
+++ b/app/views/shared/_panel_old_month.erb
@@ -1,4 +1,4 @@
-<button type="button" class="btn btn-info btn-lg col-md-8" id="old_month_report-btn" data-this-month="<%= @this_month_page %>" data-from-date="<%= @from_date %>" data-toggle="modal" data-target="#old_month">
+<button type="button" class="btn btn-info btn-md col-sm-5" id="old_month_report-btn" data-this-month="<%= @this_month_page %>" data-from-date="<%= @from_date %>" data-toggle="modal" data-target="#old_month">
   <%= t "year_report.title.old_month" %>
 </button>
 <div id="old_month" class="modal fade" role="dialog">
