--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -11,15 +11,29 @@
       <a class="navbar-brand logo" href="#">
         <span><%= t "header.logo._1" %></span> <%= t "header.logo._2" %>
       </a>
+      
     </div>
+
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+            <span><%= t "header.language" %></span>
+            <span class="caret"></span>
+          </a>
+          <ul class="dropdown-menu">
+            <li><%= link_to t("header.english"), locale:"en" %></li>
+            <li><%= link_to t("header.vietnam"), locale:"vi" %></li>
+          </ul>
+        </li>
+      </ul>
       <ul class="nav navbar-nav navbar-right">
         <% if logged_in? %>
           <li><%= link_to t("month_report.link_page.month_report"), month_report_path%></li>
           <li><%= link_to t("month_report.link_page.year_report"), year_report_path%></li>
-          <li><%= link_to t("month_report.link_page.category")%></li>
+          <li><%= link_to t("month_report.link_page.category"), categories_user_index_path%></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
               <span><%= t "header.welcome" %></span>
