--- a/app/views/report/month_report.html.erb
+++ b/app/views/report/month_report.html.erb
@@ -23,7 +23,7 @@
     <div class="tab-pane fade active in" id="report">
       <div class="row mg-top-2">
       <div class="col-md-8">
-        <div class="alert alert-danger" role="alert"">
+        <div class="alert alert-danger" role="alert">
           <p><%= t "month_report.other.need_save" %> <%= standardized(((format_number(@saving_in_year).to_i + format_number(@savings).to_i) /format_number(getMonth()).to_i).abs) %> <%= t "year_report.other.vnd" %> <%= t "month_report.other.complete" %></p>
         </div>
       </div>
@@ -97,7 +97,7 @@
               <label for="exampleInputEmail1"><%= t "month_report.title.category"%></label>
               <select name="transaction[category_id]">
                 <% @categories_user.each do |category| %>
-                  <option value="<%= category.id %>"><%= category.name %></option>
+                  <%= render "category", category: category %>
                 <% end %>
               </select>
             </div>
@@ -109,7 +109,7 @@
               <div> <%= f.text_area :name, class: "form-control", id: "exampleFormControlTextarea1", rows: "3" %></div>
             </div>
             <div class="form-group">
-              <label for="exampleFormControlTextarea1"><%= t "month_report.title.choice"%></label>
+              <label for="exampleFormControlTextarea1"><%= t "month_report.transaction.choice"%></label>
               <div><%= f.radio_button :status, "1",class: "col-md-6", :checked => true %><%= t "month_report.transaction.income"%></div>
               <div><%= f.radio_button :status, "0", class: "col-md-6" %><%= t "month_report.transaction.expense"%></div>
             </div>
@@ -122,7 +122,7 @@
           <% end %>
         </div>
       </div>
-          <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">
+          <button type="button" class="btn btn-info btn-md col-md-5" data-toggle="modal" data-target="#myModal">
             <%= t "month_intense" %>
           </button>
           <div id="myModal" class="modal fade" role="dialog">
